--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ice</title>
   </head>
   <body>
     <table cellspacing="20">
@@ -14,8 +14,6 @@
           <p>i have 2 dogs</p>
         </td>
     </table>
-
-
     <hr>
     <h3>Education</h3>
     <ul>
@@ -24,7 +22,6 @@
       <li><a href="https://aavnc.rta.mi.th/index2.htm" target="_blank">Army Aviation Center</a></li>
       <li><a href="https://www.sunstateaviation.com/" target="_blank">Sunstate Aviation</a></li>
     </ul>
-
     <hr />
     <h3>Work experience</h3>
       <table cellspacing="10">
@@ -72,9 +69,6 @@
               <h4><a href="Hobbies.html">Hobbies</a></h4>
             </td>
           </tr>
-
-
-
        </table>
   </body>
 </html>
