--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/S__64725063-modified.png" width="150"    alt="Napasit Photo"/></td>
+        <td><img src="images/S__64725063-modified.png"</td>
         <td>
           <h1>My name's ICE</h1>
           <p><em>i am work for <strong>Military</strong></em></p>
