--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <table>
           <tr>
             <td>
-              <h4><a href="contract.html">Contract</a></h4>
+              <h4><a href="contract.html">contract</a></h4>
             </td>
             <td>
-              <h4><a href="hobbies.html">Hobbies</a></h4>
+              <h4><a href="hobbies.html">hobbies</a></h4>
             </td>
           </tr>
        </table>
